--- a/styles/style.css
+++ b/styles/style.css
@@ -113,6 +113,10 @@ body {
   grid-column: 2;
 }
 
+.technologies-lista li {
+  cursor: pointer;
+}
+
 .technologies-lista::-webkit-scrollbar {
   width: 18px;
 }
@@ -190,6 +194,8 @@ body {
   background: var(--blue-300);
   border: 1.5px solid var(--black);
   margin-left: 0.9px;
+  text-wrap: nowrap;
+
   /* text-transform: uppercase; */
 }
 
@@ -230,5 +236,25 @@ body {
   }
   .copyright {
     margin-bottom: 0px;
+  }
+}
+
+.js-tabcontent section {
+  display: none;
+}
+
+.js-tabcontent section.ativo {
+  display: block !important;
+  animation: show 0.5s forwards;
+}
+
+@keyframes show {
+  from {
+    opacity: 0;
+    transform: translate3d(-30px, 0, 0);
+  }
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
   }
 }
