--- a/styles/style.css
+++ b/styles/style.css
@@ -36,12 +36,22 @@ body {
   grid-template-columns: 1fr 120px minmax(300px, 800px) 1fr;
 }
 
+nav {
+  position: sticky;
+  top: 0;
+  z-index: 3;
+}
+
 .menu {
   grid-column: 3 / 5;
   margin-top: 2rem;
   margin-bottom: 2rem;
   background: var(--blue-300);
   border: 1.5px solid var(--black);
+}
+
+.menu.scrolled {
+  background: ;
 }
 
 .menu ul {
@@ -290,4 +300,16 @@ body {
     opacity: 1;
     max-height: 500px;
   }
+}
+/*  */
+
+.js .js-scroll {
+  opacity: 0;
+  transform: translate3d(-30px, 0, 0);
+  transition: 0.3s;
+}
+
+.js .js-scroll.ativo {
+  opacity: 1;
+  transform: translate3d(0, 0, 0);
 }
