--- a/styles/style.css
+++ b/styles/style.css
@@ -42,7 +42,7 @@ body {
 nav {
   position: sticky;
   top: 0;
-  z-index: 3;
+  z-index: 1;
 }
 
 #hamburger-nav {
@@ -179,6 +179,173 @@ nav {
   font-weight: 400;
   margin-bottom: 1rem;
   grid-column: 1 / 4;
+}
+
+.technologies button {
+  box-sizing: border-box;
+  all: unset;
+  cursor: pointer;
+  height: fit-content;
+  width: fit-content;
+  background: var(--rose-300);
+  border-radius: 10px;
+  padding: 5px 7px;
+
+  /* background: #c1d9f1; */
+  /* border-radius: 12px; */
+
+  /* font-weight: 500; */
+  /* padding: .3rem .6rem; */
+  /* white-space: nowrap; */
+}
+
+.technologies button a {
+  display: flex;
+  gap: 5px;
+  text-decoration: none;
+  font-family: "IBM Plex Mono", monospace;
+  letter-spacing: 0.05em;
+  font-weight: bold;
+  text-transform: uppercase;
+  color: white;
+  /* color: #6fa9ce; */
+  font-size: 0.8rem;
+}
+
+.technologies button:hover {
+  border: 1.5px solid var(--black-500);
+}
+
+/* Estilo para o modal */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content {
+  background-color: #fff;
+  border-radius: 10px;
+  margin: 12% auto;
+  padding: 20px;
+  width: 45%;
+  display: flex;
+  flex-direction: column;
+  font-family: Helvetica, Arial;
+}
+
+.modalDiv {
+  display: flex;
+  flex-direction: column;
+}
+
+.lineFirst {
+  display: flex;
+  justify-content: center;
+  align-content: space-between;
+  gap: 50px;
+  margin: 20px 0;
+}
+
+.lineSec {
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto 6px auto;
+  justify-content: center;
+  gap: 10px;
+}
+
+.lineSec textarea {
+  width: 300px; /* Largura desejada */
+  height: 150px; /* Altura desejada */
+  resize: none;
+}
+
+.modal-content button {
+  all: unset;
+  cursor: pointer;
+  background: var(--blue-300);
+  border-radius: 0.5rem;
+  padding: 0.7rem 2.25rem;
+  border: 1.5px solid var(--black-500);
+}
+
+.modal-content button a {
+  display: flex;
+  text-decoration: none;
+  font-family: "IBM Plex Mono", monospace;
+  letter-spacing: 0.02em;
+  font-weight: bold;
+  color: var(--black-500);
+  font-size: 0.8rem;
+}
+
+.modal-content button:hover {
+  background: var(--blue-500);
+}
+
+.modal-content-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.modal-content h2 {
+  font-family: "IBM Plex Mono", monospace;
+  font-size: 1rem;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  color: var(--red-300);
+}
+
+.modal-content h2::before {
+  content: "";
+  display: inline-block;
+  width: 150px;
+  height: 10px;
+  margin-right: 10px;
+  background: var(--blue-300);
+}
+
+.modal-content h2::after {
+  content: "";
+  display: inline-block;
+  width: 150px;
+  height: 10px;
+  margin-left: 10px;
+  background: var(--blue-300);
+}
+
+.modal-content form button {
+  display: flex;
+  margin: 15px auto 0px auto;
+}
+
+.close {
+  position: absolute;
+  right: 0;
+  font-size: 28px;
+  cursor: pointer;
+}
+
+.close:hover {
+  color: var(--red-300);
+}
+
+:focus {
+  outline: transparent;
+  box-shadow: 0 0 0 1px var(--blue-300);
+}
+
+.modal-content input:focus,
+textarea:focus {
+  border-color: var(--blue-300); /* Cor da borda */
 }
 
 .technologies h2 {
